--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "name": "evertoolbox-backend",
   "version": "1.0.0",
-  "description": "Server backend for EverToolbox with file conversions and TTS",
+  "description": "Backend for EverToolbox - SEO, TTS, conversions, image, zip/unzip",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "archiver": "^5.3.1",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "google-tts-api": "^2.0.1",
     "multer": "^1.4.5-lts.1",
-    "child_process": "^1.0.2",
-    "sharp": "^0.33.1",
-    "cors": "^2.8.5"
+    "node-fetch": "^2.6.7",
+    "sharp": "^0.32.1",
+    "unzipper": "^0.10.11",
+    "uuid": "^9.0.0"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
-
