--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "sharp": "^0.32.1",
     "unzipper": "^0.10.11",
     "uuid": "^9.0.0",
-    "franc": "^6.1.0"
+    "franc": "^6.1.0",
+   "adm-zip": "^0.5.10"
      },
   "engines": {
     "node": ">=16"
