--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "unzipper": "^0.10.11",
     "uuid": "^9.0.0",
     "franc": "^6.1.0",
-   "adm-zip": "^0.5.10"
+   "adm-zip": "^0.5.10",
+   "pdf-lib": "^1.17.1"
      },
   "engines": {
     "node": ">=16"
