--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "archiver": "^5.3.1",
+    "archiver": "^6.0.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "google-tts-api": "^2.0.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.1",
-    "sharp": "^0.32.1",
+    "sharp": "^0.33.3",
     "unzipper": "^0.10.11",
     "uuid": "^9.0.0",
     "franc": "^6.1.0",
-   "adm-zip": "^0.5.10",
-   "pdf-lib": "^1.17.1"
+   "adm-zip": "^0.5.12",
+   "pdf-lib": "^1.17.1",
+   "file-type": "^18.7.0"
      },
   "engines": {
     "node": ">=16"
