--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "uuid": "^9.0.0",
     "franc": "^6.1.0",
    "adm-zip": "^0.5.12",
-   "pdf-lib": "^1.17.1",
-   "file-type": "^18.7.0"
+   "pdf-lib": "^1.17.1"
      },
   "engines": {
     "node": ">=16"
