--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "uuid": "^9.0.0",
     "franc": "^6.1.0",
    "adm-zip": "^0.5.12",
-   "pdf-lib": "^1.17.1"
+   "pdf-lib": "^1.17.1",
+   "formidable": "^3.5.1",
+   "child_process": "^1.0.2",
+   "fs-extra": "^11.2.0"
      },
   "engines": {
     "node": ">=16"
