--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
    "pdf-lib": "^1.17.1",
    "formidable": "^3.5.1",
    "child_process": "^1.0.2",
-   "fs-extra": "^11.2.0"
+   "fs-extra": "^11.2.0",
+   "pdfkit": "^0.13.0",
+    "mammoth": "^1.5.1"
+   
      },
   "engines": {
     "node": ">=16"
