--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
    "pdfkit": "^0.13.0",
     "mammoth": "^1.5.1",
    "pdf2pic": "^3.1.1",
-   "sanitize-filename": "^1.6.3"
-   
+   "sanitize-filename": "^1.6.3",
+   "pdf-parse": "1.1.1",
+    "docx": "8.5.0"
      },
   "engines": {
     "node": ">=16"
