--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
  {
-  "renderRebuildTrigger": "2"
+  "renderRebuildTrigger": "2",
   "name": "evertoolbox-backend",
   "type": "module",
   "version": "1.0.0",
