--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
- {
-  "renderRebuildTrigger": "2",
+{
+  "renderRebuildTrigger": "3",
   "name": "evertoolbox-backend",
   "type": "module",
   "version": "1.0.0",
@@ -20,19 +20,19 @@
     "unzipper": "^0.10.11",
     "uuid": "^9.0.0",
     "franc": "^6.1.0",
-   "adm-zip": "^0.5.12",
-   "pdf-lib": "^1.17.1",
-   "formidable": "^3.5.1",
-   "child_process": "^1.0.2",
-   "fs-extra": "^11.2.0",
-   "pdfkit": "^0.13.0",
+    "adm-zip": "^0.5.12",
+    "pdf-lib": "^1.17.1",
+    "formidable": "^3.5.1",
+    "child_process": "^1.0.2",
+    "fs-extra": "^11.2.0",
+    "pdfkit": "^0.13.0",
     "mammoth": "^1.5.1",
-   "pdf2pic": "^3.1.1",
-   "sanitize-filename": "^1.6.3",
-   "pdf-parse": "1.1.0",
+    "pdf2pic": "^3.1.1",
+    "sanitize-filename": "^1.6.3",
+    "pdf-parse": "1.1.0",
     "docx": "8.5.0"
-     },
+  },
   "engines": {
-    "node": ">=16"
+    "node": "20.x"
   }
 }
