--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "franc": "^6.1.0",
     "mime-types": "^2.1.35",
     "sanitize-filename": "^1.6.3",
-    "tmp-promise": "^3.0.2",
+    "tmp-promise": "^3.0.2"
      },
   "engines": {
     "node": ">=16"
