--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "franc": "^6.1.0",
     "mime-types": "^2.1.35",
     "sanitize-filename": "^1.6.3",
-    "tmp-promise": "^3.0.2"
+    "tmp-promise": "^3.0.2",
+    "file-type": "^18.0.0",
+    "express-rate-limit": "^6.10.0",
+    "libreoffice-convert": "^1.0.0",   
      },
   "engines": {
     "node": ">=16"
