--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "express-rate-limit": "^6.10.0",
     "libreoffice-convert": "^1.0.0",
     "adm-zip": "^0.5.10",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
-    "@ffmpeg-installer/ffmpeg": "^1.1.0"
+    "pdf-lib": "^1.17.1",
+    "jszip": "^3.10.1",
+    "docx": "^9.0.3"
      },
   "engines": {
     "node": ">=16"
