--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "fluent-ffmpeg": "^2.1.2",
     "pdf-lib": "^1.17.1",
     "jszip": "^3.10.1",
-    "docx": "^9.0.3"
+    "docx": "^9.0.3",
+    "pdfkit": "^0.13.0"
      },
   "engines": {
     "node": ">=16"
