--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "pdf-lib": "^1.17.1",
     "jszip": "^3.10.1",
     "docx": "^9.0.3",
-    "pdfkit": "^0.13.0"
+    "pdfkit": "^0.13.0",
+    "path": "^0.12.7",
+    "fs-extra": "^11.2.0"
      },
   "engines": {
     "node": ">=16"
