--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "docx": "^9.0.3",
     "pdfkit": "^0.13.0",
     "path": "^0.12.7",
-    "fs-extra": "^11.2.0"
+    "fs-extra": "^11.2.0",
+    "pdf-parse": "^1.1.1"    
      },
   "engines": {
     "node": ">=16"
