--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "pdfkit": "^0.13.0",
     "path": "^0.12.7",
     "fs-extra": "^11.2.0",
-      
+     "mammoth": "^1.7.0",
+     "office-converter": "^2.0.0",
     
     "pdf-parse": "^1.1.1"    
      },
