--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "path": "^0.12.7",
     "fs-extra": "^11.2.0",
      "mammoth": "^1.7.0",
-    
+    "pypandoc": "^1.7.5",
     
     "pdf-parse": "^1.1.1"    
      },
