--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   "start": "node server.js"
   },
   "dependencies": {
-    "archiver": "^5.3.1",
-    "cheerio": "^1.0.0-rc.12",
+    "archiver": "^7.0.1",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.21.1",
     "google-tts-api": "^2.0.2",
-    "multer": "^1.4.5-lts.1",
-    "node-fetch": "^2.6.1",
-    "sharp": "^0.32.1",
-    "unzipper": "^0.10.11",
-    "uuid": "^9.0.0",
-    "franc": "^6.1.0",
+    "multer": "^2.0.0",
+    "node-fetch": "^2.7.0",
+    "sharp": "^0.33.5",
+    "unzipper": "^0.12.3",
+    "uuid": "^11.0.3",
+     "franc": "^6.1.0",
     "mime-types": "^2.1.35",
     "sanitize-filename": "^1.6.3",
     "tmp-promise": "^3.0.2",
