--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,55 @@
+# -------------------------------
+# Node & System Files
+# -------------------------------
 node_modules
-uploads
-processed
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+package-lock.json
+pnpm-lock.yaml
+
+# -------------------------------
+# Git & IDE Metadata
+# -------------------------------
 .git
-*.log
-*.md
+.gitignore
+.gitattributes
+.vscode
+.idea
 .DS_Store
+Thumbs.db
+
+# -------------------------------
+# OS & Temp Files
+# -------------------------------
+tmp/
+temp/
+*.tmp
+*.log
+
+# -------------------------------
+# Build Artifacts
+# -------------------------------
+dist/
+build/
+coverage/
+.cache/
+.env
+.env.*
+
+# -------------------------------
+# Local uploads / user files (if any)
+# -------------------------------
+uploads/
+public/uploads/
+assets/uploads/
+files/
+*.bak
+*.swp
+
+# -------------------------------
+# Render / Docker internal
+# -------------------------------
+Dockerfile
+docker-compose.yml
+README.md
